[gd_scene load_steps=8 format=3 uid="uid://dr3whfqoh0ahb"]

[ext_resource type="Script" path="res://jogador_azul.gd" id="1_p85na"]
[ext_resource type="Script" path="res://addons/GD-Sync/Scripts/Types/PropertySynchronizer.gd" id="2_etv0d"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_iluei"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u40dp"]
albedo_color = Color(0, 0, 0.556863, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a65ta"]

[sub_resource type="BoxShape3D" id="BoxShape3D_krxkm"]
size = Vector3(2.3551, 1.44415, 1.31836)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_u0j47"]
height = 1.70971
radius = 0.70492

[node name="Jogador" type="CharacterBody3D" groups=["azul"]]
script = ExtResource("1_p85na")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_iluei")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_u40dp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a65ta")

[node name="GiroCamera" type="Node3D" parent="."]

[node name="SpringArm3D" type="SpringArm3D" parent="GiroCamera"]
spring_length = 4.8

[node name="Camera3D" type="Camera3D" parent="GiroCamera/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0762882, 0.12344, 5.96464)
current = true

[node name="AreaChute" type="Area3D" parent="GiroCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0116005, 0.0128472, -1.50681)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="GiroCamera/AreaChute"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000851301, -0.19216, 0.835271)
shape = SubResource("BoxShape3D_krxkm")

[node name="AreaConducao" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00484848, 0.0122168, -1.5087)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaConducao"]
transform = Transform3D(1.72681, 0, 0, 0, 0.560255, 0, 0, 0, 1.19238, -0.00219905, -0.443847, 1.1596)
shape = SubResource("CylinderShape3D_u0j47")

[node name="PropertySynchronizer" type="Node" parent="."]
script = ExtResource("2_etv0d")
broadcast = 2
node_path = NodePath("..")
properties = PackedStringArray("position", "rotation")
interpolated = true
interpolation_speed = 30.0
extrapolated = false
max_extrapolation_time = 0.2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BarraForca" type="ProgressBar" parent="CanvasLayer"]
offset_left = 446.0
offset_top = 582.0
offset_right = 733.0
offset_bottom = 617.0
show_percentage = false
